--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8HxqLDrF8L5qs6wPqmaVo",
+      "authorship_tag": "ABX9TyMLThn72DeOUn5ssGHQ1Ugh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1066,14 +1066,7 @@
         "import pickle\n",
         "\n",
         "# Load all sheets from the Excel file\n",
-        "file_path = '/content/drive/MyDrive/Course Structure for Analytics Boot camp.xlsx'\n",
-        "#sheets = pd.read_excel(file_path, sheet_name=None)\n",
-        "\n",
-        "import pandas as pd\n",
-        "import pickle\n",
-        "\n",
-        "# Load all sheets from the Excel file\n",
-        "#file_path = 'requirements.xlsx'\n",
+        "file_path = 'requirements.xlsx'\n",
         "sheets = pd.read_excel(file_path, sheet_name=None)\n",
         "\n",
         "# Preprocess each sheet and store in a dictionary\n",
@@ -1081,14 +1074,14 @@
         "for sheet_name, df in sheets.items():\n",
         "    # Normalize column names to lowercase and strip any leading/trailing whitespace\n",
         "    df.columns = [col.lower().strip() for col in df.columns]\n",
+        "    # Convert all records to lowercase\n",
+        "    df = df.applymap(lambda x: x.lower() if isinstance(x, str) else x)\n",
         "    # Convert to list of dictionaries\n",
         "    data_dict[sheet_name.lower().strip()] = df.to_dict(orient='records')\n",
         "\n",
         "# Save the processed data to a file for quick loading later\n",
         "with open('processed_data.pkl', 'wb') as f:\n",
-        "    pickle.dump(data_dict, f)\n",
-        "\n",
-        "print(\"Data preprocessing and saving completed.\")\n"
+        "    pickle.dump(data_dict, f)"
       ],
       "metadata": {
         "colab": {
@@ -1174,18 +1167,19 @@
         "            result_df = matching_rows[['topic', 'sub topics covered']].reset_index(drop=True)\n",
         "            return best_match, result_df\n",
         "        else:\n",
-        "            return best_match, f\"Columns 'topic' and 'sub topics covered' not found in sheet: {best_match}\"\n",
+        "            return best_match, pd.DataFrame(columns=['topic', 'sub topics covered'])  # Return an empty DataFrame with the correct columns\n",
         "    else:\n",
-        "        return None, \"No matching sheet found.\"\n",
+        "        return None, pd.DataFrame(columns=['topic', 'sub topics covered'])  # Return an empty DataFrame with the correct columns\n",
         "\n",
         "# Example usage\n",
         "prompt = input(\"Enter your prompt: \")\n",
         "sheet_name, result = find_relevant_sheet_and_extract(prompt)\n",
-        "if isinstance(result, pd.DataFrame):\n",
+        "if not result.empty:\n",
         "    print(f\"Best matching sheet: {sheet_name}\")\n",
         "    print(\"Matching columns and rows:\")\n",
         "    print(result)\n",
         "else:\n",
+        "    print(\"No matching rows found.\")\n",
         "    print(result)\n"
       ],
       "metadata": {
@@ -1193,19 +1187,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JXFMLPEUURvt",
-        "outputId": "71040c3c-86e0-4fea-e507-f85be7739329"
+        "outputId": "b2800e4d-71b4-4505-8ddc-03d61fa35b41"
       },
-      "execution_count": 54,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your prompt: tableau barchart \n",
-            "Best matching sheet: data visulization- tableau\n",
+            "Enter your prompt: dash\n",
+            "Best matching sheet: data visualization\n",
             "Matching columns and rows:\n",
-            "  topic                     sub topics covered\n",
-            "0   NaN  Tableau Data Model, Joins, and Blends\n"
+            "  topic   sub topics covered\n",
+            "0   NaN  Creating Dashboards\n"
           ]
         }
       ]
